Line hight fix on mobile

--- a/stylesheets/block-editor.css
+++ b/stylesheets/block-editor.css
@@ -142,6 +142,11 @@ h1.wp-block-heading {
     font-size: 25px;
   }
 }
+@media (max-width: 768px) {
+  h1.wp-block-heading {
+    line-height: 1;
+  }
+}
 
 h2.wp-block-heading {
   font-size: 18px;
@@ -159,6 +164,11 @@ h2.wp-block-heading {
 @media (min-width: 992px) {
   h2.wp-block-heading {
     font-size: 18px;
+  }
+}
+@media (max-width: 768px) {
+  h2.wp-block-heading {
+    line-height: 1;
   }
 }
 
@@ -179,6 +189,11 @@ h3.wp-block-heading {
     font-size: 15px;
   }
 }
+@media (max-width: 768px) {
+  h3.wp-block-heading {
+    line-height: 1;
+  }
+}
 
 h4.wp-block-heading, h5.wp-block-heading, h6.wp-block-heading {
   font-size: 10px;
@@ -195,6 +210,11 @@ h4.wp-block-heading, h5.wp-block-heading, h6.wp-block-heading {
 @media (min-width: 992px) {
   h4.wp-block-heading, h5.wp-block-heading, h6.wp-block-heading {
     font-size: 10px;
+  }
+}
+@media (max-width: 768px) {
+  h4.wp-block-heading, h5.wp-block-heading, h6.wp-block-heading {
+    line-height: 1;
   }
 }
 
